--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-tablestore = ">=4.6.0"
+tablestore = "==4.6.0"
+flask = "==1.0.2"
 
 [requires]
 python_version = "3.7"
