--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "==19.3b0"
 
 [packages]
 tablestore = "==4.6.0"
 flask = "==1.0.2"
+
 
 [requires]
 python_version = "3.7"
